<resources>
    <string name="app_name" translatable="false">MySavings</string>
    <string name="Converter">Converter</string>
    <string name="MySavings">MySavings</string>
    <string name="Options">Options</string>
    <string name="Home">Home</string>
    <string name="chooseLanguage">Choose Language:</string>
    <string name="English">English</string>
    <string name="Greek">Greek</string>
    <string name="Confirm">Confirm</string>
    <string name="Exit">Exit</string>
    <string name="Euros" translatable="false">0</string>
    <string name="Dollars" translatable="false">0</string>
    <string name="Pounds" translatable="false">0</string>
    <string name="EUR" translatable="false">EUR</string>
    <string name="USD" translatable="false">USD</string>
    <string name="GBP" translatable="false">GBP</string>
    <string name="Add">Add</string>
    <string name="From">From:</string>
    <string name="To">To:</string>
    <string name="Value">Value:</string>
    <string name="Output" translatable="false">= 0</string>
    <string name="Convert">Convert</string>
    <string name="ConvertSavings">Convert Savings</string>
    <string name="Back">Back</string>
    <string name="Remove">Remove</string>
    <string name="SavingsAdded">Savings Added</string>
    <string name="SavingsRemoved">Savings Removed</string>
    <string name="EnterValue">Enter Value</string>
    <string name="Balance">: Your Balance is:</string>
    <string name="ConvertSuccess">Successful Convert</string>
    <string name="ConvertFail">Convert Failed</string>
</resources>
