<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavingsActivity">

    <include
        android:id="@+id/include"
        layout="@layout/custom_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/homeBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/converterBTN"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/converterBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Converter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/homeBTN"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="128dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/euroIcon"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:srcCompat="@drawable/eurosymbol" />

            <ImageView
                android:id="@+id/dollarIcon"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="32dp"
                app:srcCompat="@drawable/dollarsymbol" />

            <ImageView
                android:id="@+id/poundsIcon"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="32dp"
                app:srcCompat="@drawable/poundsymbol" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/inputTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="100"
                android:ems="8"
                android:inputType="numberDecimal"
                tools:ignore="LabelFor" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/addBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Add" />

        <Button
            android:id="@+id/mySavingsBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/MySavings" />

        <Button
            android:id="@+id/removeBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Remove" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>